--- a/util/gen-tarball.in
+++ b/util/gen-tarball.in
@@ -22,17 +22,10 @@ case $1 in
     debian|ubuntu)
 	SRCROOT="e2fsprogs-$deb_pkgver"
 	tarout="e2fsprogs_@E2FSPROGS_PKGVER@.orig.tar.gz"
-	list=all
-	;;
-    subset)
-	SRCROOT="e2fsprogs-libs-$base_ver"
-	tarout="$SRCROOT.tar.gz"
-	list=subset
 	;;
    all|*)
 	SRCROOT="e2fsprogs-$base_ver"
 	tarout="$SRCROOT.tar.gz"
-	list=all
 	;;
 esac
 
@@ -46,7 +39,7 @@ fi
 		-o -name changed-files -o -name .#\* -o -name \*.tar.gz \
 		-o -name autom4te.cache \) \
 		-print) > $exclude
-sed -e "s;^;$base_e2fsprogs/;" < $srcdir/$list.exclude >> $exclude
+sed -e "s;^;$base_e2fsprogs/;" < $srcdir/all.exclude >> $exclude
 
 (cd $top_srcdir/.. ; \
  tar -c -f - -X $exclude --sort=name --owner=0 --group=0 \
