--- a/debian/rules
+++ b/debian/rules
@@ -390,24 +390,24 @@ binary-arch: install $(INSTALL_UDEB)
 	$(INSTALL) -d ${debdir}/libext2fs-dev/usr/share/doc/libext2fs/html-info/
 	$(INSTALL) -p -m 0644 ${stdbuilddir}/doc/*.html \
 	   ${debdir}/libext2fs-dev/usr/share/doc/libext2fs/html-info/
-	$(INSTALL) -d ${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}/html-info/
+	$(INSTALL) -d ${debdir}/comerr-dev/usr/share/doc/comerr-dev/html-info/
 	$(INSTALL) -p -m 0644 ${stdbuilddir}/lib/et/*.html \
-	   ${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}/html-info/
+	   ${debdir}/comerr-dev/usr/share/doc/comerr-dev/html-info/
 
   # texinfo docs
-	mkdir -p ${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}
+	mkdir -p ${debdir}/comerr-dev/usr/share/doc/comerr-dev
 	$(INSTALL) -p -m 0644 ${topdir}/doc/libext2fs.texinfo \
 	   ${debdir}/libext2fs-dev/usr/share/doc/libext2fs/libext2fs.texi
 	$(INSTALL) -p -m 0644 ${topdir}/lib/et/com_err.texinfo \
-	   ${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}/com_err.texi
+	   ${debdir}/comerr-dev/usr/share/doc/comerr-dev/com_err.texi
 
-	$(INSTALL) -d ${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}/examples
+	$(INSTALL) -d ${debdir}/comerr-dev/usr/share/doc/comerr-dev/examples
 	$(INSTALL) -p -m 0644 lib/ss/ss_err.et \
 		${stdbuilddir}/lib/ext2fs/ext2_err.et \
-		${debdir}/comerr-dev/usr/share/doc/libcom-err${COMERR_SOVERSION}/examples
-	$(INSTALL) -d ${debdir}/ss-dev/usr/share/doc/libss${SS_SOVERSION}/examples
+		${debdir}/comerr-dev/usr/share/doc/comerr-dev/examples
+	$(INSTALL) -d ${debdir}/ss-dev/usr/share/doc/ss-dev/examples
 	$(INSTALL) -p -m 0644 debugfs/debug_cmds.ct \
-		${debdir}/ss-dev/usr/share/doc/libss${SS_SOVERSION}/examples
+		${debdir}/ss-dev/usr/share/doc/ss-dev/examples
 
 	dh_installinfo -pcomerr-dev ${stdbuilddir}/lib/et/com_err.info
 	dh_installinfo -plibext2fs-dev ${stdbuilddir}/doc/libext2fs.info
