--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: e2fsprogs
 Section: admin
 Priority: required
 Maintainer: Theodore Y. Ts'o <tytso@mit.edu>
-Build-Depends: gettext, texinfo, pkg-config, libfuse-dev [linux-any kfreebsd-any] <!pkg.e2fsprogs.no-fuse2fs>, libattr1-dev, debhelper (>= 9.0), libblkid-dev, uuid-dev, m4
-Standards-Version: 4.2.1
+Build-Depends: gettext, texinfo, pkg-config, libfuse-dev [linux-any kfreebsd-any] <!pkg.e2fsprogs.no-fuse2fs>, libattr1-dev, debhelper (>= 11.0), libblkid-dev, uuid-dev, m4, udev, systemd, cron
+Standards-Version: 4.3.0
 Homepage: http://e2fsprogs.sourceforge.net
 Vcs-Browser: https://git.kernel.org/pub/scm/fs/ext2/e2fsprogs.git
 Vcs-Git: https://git.kernel.org/pub/scm/fs/ext2/e2fsprogs.git -b debian/master
@@ -55,8 +55,8 @@ Architecture: any
 Multi-Arch: same
 Priority: optional
 Section: oldlibs
-Description: transitional package
- This is a transitional package. It can safely be removed.
+Description: transitional package to libcom-err2
+ This is a transitional package to libcom-err2. It can safely be removed.
 
 Package: libcom-err2
 Section: libs
@@ -138,16 +138,16 @@ Architecture: any
 Multi-Arch: same
 Priority: optional
 Section: oldlibs
-Description: transitional package
- This is a transitional package. It can safely be removed.
+Description: transitional package to libext2fs2
+ This is a transitional package to libext2fs2. It can safely be removed.
 
 Package: e2fslibs-dev
 Depends: libext2fs-dev, ${misc:Depends}
 Architecture: all
 Priority: optional
 Section: oldlibs
-Description: transitional package
- This is a transitional package. It can safely be removed.
+Description: transitional package to libext2fs-dev
+ This is a transitional package to libext2fs-dev. It can safely be removed.
 
 Package: libext2fs2
 Section: libs
@@ -191,7 +191,7 @@ XB-Important: yes
 Pre-Depends: ${shlibs:Depends}, ${misc:Depends}, libblkid1, libuuid1
 Multi-Arch: foreign
 Suggests: gpart, parted, fuse2fs, e2fsck-static
-Recommends: e2fsprogs-l10n, lvm2, util-linux, coreutils
+Recommends: e2fsprogs-l10n, lvm2
 Architecture: any
 Description: ext2/ext3/ext4 file system utilities
  The ext2, ext3 and ext4 file systems are successors of the original ext
